--- a/app/app.css
+++ b/app/app.css
@@ -15,6 +15,8 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+  
+  scroll-behavior: smooth;
 }
 
 @theme inline {
