--- a/app/app.css
+++ b/app/app.css
@@ -1,18 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.custom-blue {
-  background-color: "#253872";
-}
-
-.custom-pink {
-  background-color: "#ff66b4";
-}
-
-.custom-white {
-  background-color: "#f5f6f3";
+@theme {
+  --color-moxa-blue-200: oklch(0.3587 0.1027 267.41);
+  --color-moxa: oklch(0.7085 0.1812 346.83);
+  --color-moxa-pink-200: oklch(0.5836 0.2215 355.37);
+  --color-moxa-white-200: oklch(0.9829 0.0113 128.59);
 }
